--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -2,7 +2,7 @@
 
 {{#each beers}}
 <div >
-    {{this.image}} <br>
+    <img src="{{this.image_url}}" alt=""> <br>
     {{this.name}} <br>
     {{this.description}} <br>
     {{this.tagline}} 
