--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
     <nav>
         <a href="/">_Home_</a>
         <a href="/beers">_Beers_</a>
-        <a href="/random-beers"> _Random Beer_ </a>
+        <a href="/random-beer"> _Random Beer_ </a>
     </nav>
 
     {{{body}}}
